move about us into intro

--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -26,6 +26,9 @@
 
     <!-- Custom Styles for our presentation -->
     <style>
+      #arcgis-api-for-javascript-and-angularjs- {
+        margin-top: 200px;
+      }
       .reveal section img {
         border: 0px;
       }
@@ -63,7 +66,6 @@
       <!-- note for vertical stacks,  data-separator="^----$" data-separator-vertical="^---$" -->
       <div class="slides">
         <section data-markdown="intro.md" data-background="reveal.js/img/title.png" ></section>
-        <section data-markdown="about-us.md" data-background="reveal.js/img/bg-1.png" ></section>
         <section data-markdown="start-adding-slides.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
         <section data-markdown="resources.md" data-background="reveal.js/img/bg-5.png" ></section>
         <section data-markdown="thank-you.md" data-background="reveal.js/img/bg-4.png" ></section>
