additional work on slides for - scope tips - brief tour - directives/widgets

--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>ArcGIS API for JavaScript and AngularJS: What's Next</title>
+    <title>ArcGIS API for JavaScript and AngularJS: What's New, What's Next</title>
 
 
     <meta name="description" content="Esri Dev Summit 2016 Presentation">
