using color-brewer theme for syntax highlghting

--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="reveal.js/css/theme/esri-dev-summit-2016.css" id="theme">
 
     <!-- Code syntax highlighting -->
-    <link rel="stylesheet" href="reveal.js/lib/css/solarized_dark.css">
+    <link rel="stylesheet" href="reveal.js/css/color-brewer.css">
 
     <!-- for icons -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
