--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -31,6 +31,50 @@
       }
       .reveal section img {
         border: 0px;
+        background: none;
+        box-shadow: none;
+      }
+      .reveal ul {
+        list-style-type: none;
+      }
+
+      /* overlay header */
+      .reveal h4 {
+          background: rgba(0,0,0,.5);
+          color:  #fff;
+          position: fixed;
+          width: calc(100% + 150px);
+          left: 0;
+          top: 280px;
+          margin-left: -75px;
+          margin-top: 0;
+          margin-bottom: 0;
+          font-size: 2em;
+          line-height: 2.1em;
+      }
+
+      /* overlay content */
+      .reveal .slim-shady {
+          background: rgba(0,0,0,0.5);
+          width: 50%;
+          margin-left: auto;
+          margin-right: auto;
+          padding-top: 1em;
+          padding-bottom: 1em;
+      }
+
+      .reveal table.logos td {
+        border-bottom: 0;
+        vertical-align: middle;
+        text-align: center;
+      }
+
+      .reveal .ie6-logo {
+        background-color: #fff;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 10px;
       }
     </style>
 
@@ -65,12 +109,11 @@
       you can override it on a slide by slide basis from within the MD. -->
       <!-- note for vertical stacks,  data-separator="^----$" data-separator-vertical="^---$" -->
       <div class="slides">
-        <section data-markdown="intro.md" data-background="reveal.js/img/title.png" ></section>
-        
-        <!-- placeholder slide -->
-        <section data-markdown="start-adding-slides.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
+        <section data-markdown="title.md" data-background="reveal.js/img/title.png" ></section>
         
         <!-- PART 1: angular-esri-map v2  -->
+        <section data-markdown="intro.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
+
         <section data-markdown="quick-start-and-brief-tour.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
         <section data-markdown="directives-for-widgets.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
         <section data-markdown="angular-scope-tips.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
