added Part 2 slide for jwasilgeo playground

--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -119,6 +119,7 @@
         <section data-markdown="angular-scope-tips.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
 
         <!-- PART 2: Angular2  -->
+        <section data-markdown="jwasilgeo-angular2-esri-playground.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
         
         <!-- FIN -->
         <section data-markdown="resources.md" data-background="reveal.js/img/bg-5.png" ></section>
