added survey slide at end and tweaks to slides

--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -34,9 +34,6 @@
         background: none;
         box-shadow: none;
       }
-      .reveal ul {
-        list-style-type: none;
-      }
 
       /* overlay header */
       .reveal h4 {
@@ -124,6 +121,7 @@
         <!-- FIN -->
         <section data-markdown="resources.md" data-background="reveal.js/img/bg-5.png" ></section>
         <section data-markdown="thank-you.md" data-background="reveal.js/img/bg-4.png" ></section>
+        <section class="slide" data-background="img/survey.png" data-background-size="100%"></section>
         <section data-markdown="end.md" data-background="reveal.js/img/end.png" ></section>
       </div>
     </div>
