--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -116,6 +116,7 @@
         <section data-markdown="angular-scope-tips.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
 
         <!-- PART 2: Angular2  -->
+        <section data-markdown="angular-2.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
         <section data-markdown="jwasilgeo-angular2-esri-playground.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
         
         <!-- FIN -->
