added conclusion; couple of small changes

--- a/src/slides/index.html
+++ b/src/slides/index.html
@@ -120,6 +120,7 @@
         <section data-markdown="jwasilgeo-angular2-esri-playground.md" data-background="reveal.js/img/bg-3.png" data-separator-notes="^Note:"></section>
         
         <!-- FIN -->
+        <section data-markdown="conclusion.md" data-background="reveal.js/img/bg-5.png" ></section>
         <section data-markdown="resources.md" data-background="reveal.js/img/bg-5.png" ></section>
         <section data-markdown="thank-you.md" data-background="reveal.js/img/bg-4.png" ></section>
         <section class="slide" data-background="img/survey.png" data-background-size="100%"></section>
